# SanableEngine

./: .gitignore  .gitmodules  README.md  emsetup.bat
SanableEngine/: CMakeHelperFuncs.cmake  CMakeHelperFuncs.txt  CMakeLists.txt  CMakeSettings.json  Imports.cmake  LICENSE.txt  Utils.cmake  cpp.hint  embuild.bat  emclean.bat  emrebuild-data.bat  server.bat
SanableEngine/PluginControlUI/: CMakeLists.txt
SanableEngine/PluginControlUI/private/: GUIButton.hpp  GUICheckbox.hpp  GUIContainer.hpp  GUIControl.hpp  GUIElement.hpp  GUIInspectedVariable.hpp  GUILiveText.hpp  GUIPanel.hpp  GUISlider.hpp  GUIText.hpp  PluginManagerView.hpp  PluginView.hpp  Resources.hpp  TypeLayoutView.hpp
SanableEngine/PluginControlUI/src/: GUIButton.cpp  GUICheckbox.cpp  GUIContainer.cpp  GUIControl.cpp  GUIElement.cpp  GUILiveText.cpp  GUIPanel.cpp  GUISlider.cpp  GUIText.cpp  PluginManagerView.cpp  PluginView.cpp  Resources.cpp  TypeLayoutView.cpp  pluginmain.cpp
SanableEngine/PrimitivesPlugin/: CMakeLists.txt
SanableEngine/PrimitivesPlugin/public/: RectangleCollider.hpp  RectangleRenderer.hpp  dllapi.h
SanableEngine/PrimitivesPlugin/src/: RectangleCollider.cpp  RectangleRenderer.cpp  pluginmain.cpp
SanableEngine/UserPlugin/: CMakeLists.txt
SanableEngine/UserPlugin/private/: ColliderColorChanger.hpp  ManualObjectRotator.hpp  ObjectSpinner.hpp  PlayerController.hpp  dllapi.h
SanableEngine/UserPlugin/resources/: bunny.fbx
SanableEngine/UserPlugin/src/: ColliderColorChanger.cpp  ManualObjectRotator.cpp  ObjectSpinner.cpp  PlayerController.cpp  pluginmain.cpp  rtti.generated.cpp
SanableEngine/build-tools/: cpp_concepts.py  cpp_emitter.py  parse-ast.py  test.py
SanableEngine/engine/: CMakeLists.txt
SanableEngine/engine/assets/: CMakeLists.txt
SanableEngine/engine/core/: CMakeLists.txt  rtti.template.cpp
SanableEngine/engine/graphics/: CMakeLists.txt
SanableEngine/engine/gui/: CMakeLists.txt
SanableEngine/engine/gui/src/: HUD.cpp  (+4 more)
SanableEngine/engine/memory/: CMakeLists.txt
SanableEngine/engine/reflection/: CMakeLists.txt
SanableEngine/engine/serialization/: CMakeLists.txt
SanableEngine/libs/: Imports.cmake
SanableEngine/libs/doctest/: CMakeLists.txt
SanableEngine/libs/stb_image/: CMakeLists.txt
christensen-GPR460/: CMakeHelperFuncs.txt  CMakeLists.txt  christensen-GPR460.sln  embuild-PrimitivesPlugin.bat  embuild-TestPlugin.bat  embuild-UserPlugin.bat  embuild-all.bat  embuild-common.bat  embuild-engine.bat  embuild-env.bat  embuild-shared.bat  embuild.bat  server.bat
christensen-GPR460/PluginShared/: CPP.HINT  PluginShared.vcxproj  PluginShared.vcxproj.filters
christensen-GPR460/PluginShared/include/: Plugin.h  Plugin.hpp  PluginCore.h  PluginInfo.h  PluginLoader.h  PluginManager.hpp
christensen-GPR460/PluginShared/src/: Plugin.cpp  PluginInfo.cpp
christensen-GPR460/PrimitivesPlugin/: CMakeLists.txt  PrimitivesPlugin.vcxproj  PrimitivesPlugin.vcxproj.filters
christensen-GPR460/PrimitivesPlugin/include/: RectangleCollider.hpp
christensen-GPR460/PrimitivesPlugin/public/: RectangleCollider.hpp  RectangleRenderer.hpp  dllapi.h
christensen-GPR460/PrimitivesPlugin/src/: RectangleCollider.cpp  RectangleRenderer.cpp  pluginmain.cpp
christensen-GPR460/PublicShared/: PublicShared.vcxproj  PublicShared.vcxproj.filters
christensen-GPR460/PublicShared/public/: Aliases.hpp  CallBatcher.inl  EngineCore.hpp  GameObject.hpp  Hotswap.hpp  MemoryManager.hpp  Plugin.hpp  PluginCore.hpp  PluginManager.hpp  RawMemoryPool.hpp  TypedMemoryPool.inl
christensen-GPR460/PublicShared/src/: EngineCore.cpp  GameObject.cpp  MemoryManager.cpp  Plugin.cpp  PluginManager.cpp  RawMemoryPool.cpp  System.cpp
christensen-GPR460/SerializationLib/: ISerializable.hpp  SerialRefl.hpp  SerializationDefines.hpp  SerializationLib.vcxproj  SerializationLib.vcxproj.filters  SerializationReaderWriter.cpp  SerializationReaderWriter.hpp  SerializationReaderWriter.inl  SerializationRegistry.cpp  SerializationRegistry.hpp  SerializationRegistryEntry.cpp  SerializationRegistryEntry.hpp  SerializedObject.cpp  SerializedObject.hpp  SerializedTypes.hpp
christensen-GPR460/TestPlugin/: TestPlugin.vcxproj  TestPlugin.vcxproj.filters  pluginmain.cpp
christensen-GPR460/TestPlugin/include/: exports.h
christensen-GPR460/TestPlugin/src/: pluginmain.cpp
christensen-GPR460/UserPlugin/: CMakeLists.txt  UserPlugin.vcxproj  UserPlugin.vcxproj.filters
christensen-GPR460/UserPlugin/include/: PlayerController.hpp
christensen-GPR460/UserPlugin/src/: pluginmain.cpp
christensen-GPR460/christensen-GPR460/: Aliases.hpp  Logger.cpp  Logger.h  System.cpp  System.hpp  christensen-GPR460.vcxproj  christensen-GPR460.vcxproj.filters  main.cpp
christensen-GPR460/christensen-GPR460/include/: Aliases.hpp  CallBatcher.inl  ColliderColorChanger.hpp  Component.hpp  EngineCore.hpp  GameObject.hpp  MemoryManager.hpp  MemoryPoolCommon.hpp  MemoryPoolForked.hpp  MemoryPoolPagedResizing.hpp  PlayerController.hpp  PluginManager.hpp  RawMemoryPool.hpp  RectangleCollider.hpp  RectangleRenderer.hpp  StackAllocator.hpp  System.hpp  System_Emscripten.hpp  System_Outline.hpp  System_Win32.hpp  Transform.hpp  TypedMemoryPool.hpp  Vector3.inl
christensen-GPR460/christensen-GPR460/private/: System_Emscripten.hpp  System_Switcher.hpp  System_Win32.hpp
christensen-GPR460/christensen-GPR460/public/: EngineCore.hpp  GameObject.hpp  Transform.hpp  Vector3.inl
christensen-GPR460/christensen-GPR460/src/: ColliderColorChanger.cpp  Component.cpp  EngineCore.cpp  GameObject.cpp  Logger.cpp  MemoryManager.cpp  MemoryPoolCommon.cpp  MemoryPoolForked.cpp  MemoryPoolPagedResizing.cpp  PlayerController.cpp  Plugin.cpp  PluginManager.cpp  RawMemoryPool.cpp  RectangleCollider.cpp  RectangleRenderer.cpp  StackAllocator.cpp  System_Emscripten.cpp  System_Outline.cpp  System_Win32.cpp  Transform.cpp  TypedMemoryPool.cpp  main.cpp  main_em.cpp
christensen-GPR460/engine/: CMakeLists.txt
christensen-GPR460/engine/core/: CMakeLists.txt
ci-flows/: CMakeLists.txt  build-and-test-template.yml
ci-flows/presets/: Emscripten.cmake  Windows.cmake
(+439 files in other folders)
